Refactor del package combat.io